--- a/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
@@ -3,10 +3,9 @@ Copyright 2024 New Vector Ltd
 
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: {{ $.Release.Name }}-init-secrets
-  namespace: {{ $.Release.Namespace }}
-  labels:
-    {{- include "element-io.init-secrets.labels" (dict "root" $ "context" .) | nindent 4 }}
+
+{{- with .Values.initSecrets -}}
+{{- if .enabled -}}
+{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "init-secrets")) }}
+{{- end -}}
+{{- end -}}
