--- a/charts/matrix-stack/templates/init-secrets/rolebinding.yaml
+++ b/charts/matrix-stack/templates/init-secrets/rolebinding.yaml
@@ -5,7 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
 {{- with .Values.initSecrets -}}
-{{- if .enabled -}}
+{{- if and .enabled .rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
 metadata:
