--- a/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
@@ -5,7 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
 {{- with .Values.initSecrets -}}
-{{- if .enabled -}}
+{{- if and .enabled (include "element-io.init-secrets.generated-secrets" (dict "root" $ "context" .)) -}}
 {{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "init-secrets")) }}
 {{- end -}}
 {{- end -}}
