--- a/charts/matrix-stack/templates/init-secrets/role.yaml
+++ b/charts/matrix-stack/templates/init-secrets/role.yaml
@@ -4,7 +4,7 @@ Copyright 2024 New Vector Ltd
 SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 {{- with .Values.initSecrets -}}
-{{- if and .enabled .rbac.create (include "element-io.init-secrets.generated-secrets" (dict "root" $ "context" .)) -}}
+{{- if and .enabled .rbac.create -}}
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
 metadata:
