Refactor secret handling in matrix-stack charts
- Clarify required context properties in credentials template
- Ensure init secrets are included when initSecrets enabled
- Correctly reference postgres password secret property
- Remove unnecessary job from service account test case
- Simplify synapse statefulset init container configuration

--- a/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_statefulset.yaml
@@ -126,7 +126,7 @@ We have an init container to render & merge the config for several reasons:
                     include "element-io.ess-library.provided-secret-path" (
                       dict "root" $
                       "context" (dict
-                        "secretProperty" .postgres
+                        "secretProperty" .postgres.password
                         "defaultSecretName" (printf "%s-synapse" $.Release.Name)
                         "defaultSecretKey" "POSTGRES_PASSWORD"
                       )
