--- a/.github/workflows/matrix-tools.yml
+++ b/.github/workflows/matrix-tools.yml
@@ -23,7 +23,7 @@ permissions:
 
 jobs:
   tests:
-    runs-on: cpu-m
+    runs-on: cpu-s
     container:
       image: ghcr.io/${{ github.repository }}/ci-runner
       credentials:
