--- a/charts/matrix-stack/ci/init-secrets-checkov-values.yaml
+++ b/charts/matrix-stack/ci/init-secrets-checkov-values.yaml
@@ -2,27 +2,16 @@
 #
 # SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
-serverName: ess.localhost
-
 initSecrets:
-  enabled: false
-
-elementWeb:
-  additional: {
-    "default_server_config": {
-      "m.homeserver": {
-        "base_url": "https://element.ess.localhost",
-      }
-    },
-  }
-
-  ingress:
-    host: element.ess.localhost
-
+  enabled: true
   annotations:
     checkov.io/skip1: CKV_K8S_11=We deliberately don't set CPU limits. Pod is BestEffort not Guaranteed
     checkov.io/skip2: CKV_K8S_43=No digests
     checkov.io/skip3: CKV2_K8S_6=No network policy yet
+    checkov.io/skip4: CKV_K8S_38=The job needs a service account
+
+elementWeb:
+  enabled: false
 
 synapse:
   enabled: false
