--- a/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
@@ -6,6 +6,20 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 
 {{- with .Values.initSecrets -}}
 {{- if .enabled -}}
-{{- include "element-io.ess-library.serviceAccount" (dict "root" $ "context" (dict "componentValues" . "key" "init-secrets")) }}
+{{- if .serviceAccount.create }}
+apiVersion: v1
+kind: ServiceAccount
+metadata:
+  annotations:
+    "helm.sh/hook": pre-install,pre-upgrade
+  {{- with .serviceAccount.annotations }}
+    {{- toYaml . | nindent 4 }}
+  {{- end }}
+  labels:
+    {{- include "element-io.init-secrets.labels" (dict "root" $ "context" .) | nindent 4 }}
+  name: {{ include "element-io.ess-library.serviceAccountName" (dict "root" $ "context" (dict "serviceAccount" .serviceAccount "key" "init-secrets")) }}
+  namespace: {{ $.Release.Namespace }}
+automountServiceAccountToken: false
+{{- end }}
 {{- end -}}
 {{- end -}}
