init-secrets: only render if some secrets must be generated

--- a/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
+++ b/charts/matrix-stack/templates/init-secrets/serviceaccount.yaml
@@ -5,8 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
 {{- with .Values.initSecrets -}}
-{{- if .enabled -}}
-{{- if .serviceAccount.create }}
+{{- if and .enabled .serviceAccount.create (include "element-io.init-secrets.generated-secrets" (dict "root" $)) -}}
 apiVersion: v1
 kind: ServiceAccount
 metadata:
@@ -21,5 +20,4 @@ metadata:
   namespace: {{ $.Release.Namespace }}
 automountServiceAccountToken: false
 {{- end }}
-{{- end -}}
 {{- end -}}
