--- a/charts/matrix-stack/templates/init-secrets/job.yaml
+++ b/charts/matrix-stack/templates/init-secrets/job.yaml
@@ -5,7 +5,7 @@ SPDX-License-Identifier: AGPL-3.0-only OR LicenseRef-Element-Commercial
 */ -}}
 
 {{- with .Values.initSecrets -}}
-{{- if .enabled -}}
+{{- if and .enabled (include "element-io.init-secrets.generated-secrets" (dict "root" $)) -}}
 apiVersion: batch/v1
 kind: Job
 metadata:
