manifests tests: handle shared_components with more details

--- a/charts/matrix-stack/ci/pytest-element-web-values.yaml
+++ b/charts/matrix-stack/ci/pytest-element-web-values.yaml
@@ -4,6 +4,11 @@
 
 serverName: ess.localhost
 
+matrixTools:
+  image:
+    pullPolicy: Never
+    digest: ""
+
 elementWeb:
   ingress:
     host: element.{{ $.Values.serverName }}
