synapse: init signing key

--- a/charts/matrix-stack/templates/synapse/synapse_secret.yaml
+++ b/charts/matrix-stack/templates/synapse/synapse_secret.yaml
@@ -34,7 +34,7 @@ data:
 {{- with .registrationSharedSecret.value }}
   REGISTRATION_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.signingKey" "secretProperty" .signingKey)) -}}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "synapse.signingKey" "secretProperty" .signingKey "initIfAbsent" true)) -}}
 {{- with .signingKey.value }}
   SIGNING_KEY: {{ .| b64enc }}
 {{- end }}
