matrix-tools: handle MAS private keys

--- a/charts/matrix-stack/templates/matrix-authentication-service/mas_secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/mas_secret.yaml
@@ -27,13 +27,12 @@ data:
   POSTGRES_PASSWORD: {{ . | b64enc }}
 {{- end }}
 {{- end }}
-{{- with required ".matrixAuthenticationService.encryptionSecret is required" .encryptionSecret }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "secretProperty" .encryptionSecret "initIfAbsent" true)) -}}
 {{- with .value }}
   ENCRYPTION_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
 {{- with required "privateKeys is required for Matrix Authentication Service" .privateKeys }}
-{{- with required "rsa is required for Matrix Authentication Service" .rsa }}
 {{- with .value }}
   RSA_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
