--- a/charts/matrix-stack/templates/matrix-authentication-service/mas_secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/mas_secret.yaml
@@ -27,31 +27,39 @@ data:
   POSTGRES_PASSWORD: {{ . | b64enc }}
 {{- end }}
 {{- end }}
-{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "secretProperty" .encryptionSecret "initIfAbsent" true)) -}}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseSharedSecret" "secretProperty" .synapseSharedSecret "initIfAbsent" true)) }}
 {{- with .value }}
-  ENCRYPTION_KEY: {{ . | b64enc }}
+  SYNAPSE_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "secretProperty" .encryptionSecret "initIfAbsent" true)) }}
+{{- with .value }}
+  ENCRYPTION_SECRET: {{ . | b64enc }}
 {{- end }}
 {{- with required "privateKeys is required for Matrix Authentication Service" .privateKeys }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.rsa" "secretProperty" .rsa "initIfAbsent" true)) }}
+{{- with .rsa }}
 {{- with .value }}
   RSA_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaPrime256v1" "secretProperty" .ecdsaPrime256v1 "initIfAbsent" true)) }}
 {{- with .ecdsaPrime256v1 }}
 {{- with .value }}
   ECDSA_PRIME256V1_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp256k1" "secretProperty" .ecdsaSecp256k1 "initIfAbsent" true)) }}
 {{- with .ecdsaSecp256k1 }}
 {{- with .value }}
   ECDSA_SECP256K1_PRIVATE_KEY: {{ . | b64enc }}
 {{- end }}
 {{- end }}
+{{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.ecdsaSecp384r1" "secretProperty" .ecdsaSecp384r1 "initIfAbsent" true)) }}
 {{- with .ecdsaSecp384r1 }}
 {{- with .value }}
   ECDSA_SECP384R1_PRIVATE_KEY: {{ . | b64enc}}
 {{- end }}
 {{- end }}
-{{- end }}
+{{- end -}}
 {{- end -}}
 {{- end -}}
