--- a/charts/matrix-stack/templates/matrix-authentication-service/mas_ingress.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/mas_ingress.yaml
@@ -11,7 +11,7 @@ kind: Ingress
 metadata:
 {{- include "element-io.ess-library.ingress.annotations" (dict "root" $ "context" .ingress.annotations) | nindent 2 }}
   labels:
-    {{- include "element-io.matrix-authentication-service.labels" (dict "root" $) | nindent 4 }}
+    {{- include "element-io.matrix-authentication-service.labels" (dict "root" $ "context" .) | nindent 4 }}
   name: {{ $.Release.Name }}-matrix-authentication-service
   namespace: {{ $.Release.Namespace }}
 spec:
