--- a/charts/matrix-stack/templates/matrix-authentication-service/mas_deployment.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/mas_deployment.yaml
@@ -148,7 +148,7 @@ spec:
         - name: POSTGRES_PASSWORD
           value: >-
             {{
-              printf "{{ readfile \"/secrets/%s\" | urlescape }}" (
+              printf "{{ readfile \"/secrets/%s\" | urlencode }}" (
                  include "element-io.ess-library.provided-secret-path" (
                      dict "root" $
                      "context" (dict
