matrix-authentication-service: fix pytest manifests checks

--- a/charts/matrix-stack/ci/matrix-authentication-service-minimal-values.yaml
+++ b/charts/matrix-stack/ci/matrix-authentication-service-minimal-values.yaml
@@ -9,6 +9,9 @@ elementWeb:
 
 serverName: ess-enterprise.localhost
 
+initSecrets:
+  enabled: false
+
 matrixAuthenticationService:
   enabled: true
 
