--- a/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
+++ b/charts/matrix-stack/templates/matrix-authentication-service/secret.yaml
@@ -28,12 +28,16 @@ data:
 {{- end }}
 {{- end }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.synapseSharedSecret" "secretProperty" .synapseSharedSecret "initIfAbsent" true)) }}
+{{- with .synapseSharedSecret }}
 {{- with .value }}
   SYNAPSE_SHARED_SECRET: {{ . | b64enc }}
 {{- end }}
+{{- end }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.encryptionSecret" "secretProperty" .encryptionSecret "initIfAbsent" true)) }}
+{{- with .encryptionSecret }}
 {{- with .value }}
   ENCRYPTION_SECRET: {{ . | b64enc }}
+{{- end }}
 {{- end }}
 {{- with required "privateKeys is required for Matrix Authentication Service" .privateKeys }}
 {{- include "element-io.ess-library.check-credential" (dict "root" $ "context" (dict "secretPath" "matrixAuthenticationService.privateKeys.rsa" "secretProperty" .rsa "initIfAbsent" true)) }}
