pytest: add matrix-authentication-service

--- a/.github/workflows/pytest.yml
+++ b/.github/workflows/pytest.yml
@@ -28,6 +28,7 @@ jobs:
       matrix:
         test-component:
         - element-web
+        - matrix-authentication-service
         - synapse
         - well-known-delegation
     steps:
