pytest: disable initSecrets when its not needed

--- a/charts/matrix-stack/ci/pytest-element-web-values.yaml
+++ b/charts/matrix-stack/ci/pytest-element-web-values.yaml
@@ -4,10 +4,8 @@
 
 serverName: ess.localhost
 
-matrixTools:
-  image:
-    pullPolicy: Never
-    digest: ""
+initSecrets:
+  enabled: false
 
 elementWeb:
   ingress:
