--- a/Dockerfile.ci-runner
+++ b/Dockerfile.ci-runner
@@ -35,7 +35,7 @@ RUN <<EOT bash
     $(. /etc/os-release && echo "$VERSION_CODENAME") stable" | \
     tee /etc/apt/sources.list.d/docker.list > /dev/null
   apt-get -y update
-  apt-get -y --no-install-recommends install docker-ce docker-ce-cli
+  apt-get -y --no-install-recommends install docker-ce docker-ce-cli docker-buildx-plugin
 
   rm -rf /var/lib/apt/lists/*
   python3 --version
